test/sparse/vass/sparse-mismatch-dom-err-arrarr.good
sparse-mismatch-dom-err-arrarr.chpl:8: error: halt reached - Sparse arrays can't be zippered with anything other than their domains and sibling arrays
